# squint

./: .gitignore  CMakeLists.txt  README.md  maim_lock_test.sh  test.sh
src/: basic_handle.hpp  gl.cpp  gl.hpp  main.cpp
src/fx/: context.hpp  fast_pixelate.cpp  fast_pixelate.hpp  fullscreen_quad.hpp  peek_image.hpp  pipeline.cpp  pipeline.hpp  pretty_pixelate.cpp  pretty_pixelate.hpp  set_image.hpp  stage_context.hpp
src/gl/: buffer.hpp  framebuffer.hpp  gl.cpp  gl.hpp  program.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  texture.hpp
src/glsl/: average.frag  fast_pixelate.frag  quad.vert  shaders.cpp  test.frag  test.vert  upscale.frag
src/x11/: display.cpp  display.hpp  gl_context.cpp  gl_context.hpp  screenshot.cpp  screenshot.hpp  xhandle.cpp  xhandle.hpp
